--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -3,7 +3,7 @@
 {% block content %}
     
     <div class="content-section">
-        <form action="#" method="POST">
+        <form method="POST">
             {% csrf_token %}
 
             <fieldset class="form-group">
