create, update and delete posts completed

--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -8,7 +8,7 @@
             {% csrf_token %}
 
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4"> Create Post </legend>
+                <legend class="border-bottom mb-4"> Blog Post </legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
