email and password complete

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,6 +13,9 @@
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Login</button>
+                <small class="text-muted ml-2">
+                    <a href="{% url 'password_reset' %}">Forgote Password ?</a>
+                </small>
             </div>
             <div class="border-top pt-3">
                 <small class="text-muted">
